--- a/django livre.html
+++ b/django livre.html
@@ -11,5 +11,18 @@
     
     <img src="https://hbomax-images.warnermediacdn.com/images/GYjOKBgPsgouhCwEAAAAG/tileburnedin?size=1280x720&partner=hbomaxcom&v=d64c92a013ed0d1466ac193580f4305b&host=art-gallery.api.hbo.com&language=pt-br&w=1280"
 
+    <p>resumão:O filme django livre fala de uma epoca onde era muito comum o comercio de escravos
+        e nesse filme e contado a historia de um escravi chamado django ele esta indo para a cidade
+    com dois capatazes e no meio do caminho econtram um suposto dentista que os aborda no meio de sua viagem 
+os capatazes o mandam embora mais ele insiste que quer compra um escravo mis os homens o mandam embora
+então o dentista mata os homens e revela ser um assasino do governo que esta procurando um escravo sabe de uns 
+irmãos que estão sendo procurados e este escravo estava ali e ele vai com o homem atraz desses irmãos  </p>
+
+<p>pontos positivo:  </p>
+
+    <p>pontos negativos</p>
+
+    <p>nota: </p>
+
 </body>
 </html>
