--- a/django livre.html
+++ b/django livre.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,11 +18,16 @@ os capatazes o mandam embora mais ele insiste que quer compra um escravo mis os 
 então o dentista mata os homens e revela ser um assasino do governo que esta procurando um escravo sabe de uns 
 irmãos que estão sendo procurados e este escravo estava ali e ele vai com o homem atraz desses irmãos  </p>
 
-<p>pontos positivo:  </p>
+<p>pontos positivo:É um filme moito bom esteticamente mesmo sendo um filme de epoca e alem disso é muito bem
+    roterizado e feito os atores realme entraram no personagem e consegriram atuar muito bem   </p>
 
-    <p>pontos negativos</p>
+    <p>pontos negativos: per ser um filme mais antigo ele não entraga toda a sua qualida co é hoje em dia 
+        como não tinha muitos artficios de compotação na quela época teve que sem feito varios efeito reais 
+        e o ultio ponto é que nem todos pode assistir pois existem senas de nudes </p>
 
-    <p>nota: </p>
+    <p>nota:9/10 </p>
 
-</body>
-</html>
+<body></body>
+<head></head>
+
+<head><link rel="stylesheet" href="css"></head>
